--- a/templates/python_apps.html
+++ b/templates/python_apps.html
@@ -33,9 +33,16 @@
             </div>
             <div class="row">
                 <div class="col-sm-4 portfolio-item">
-                <h1>Timer</h1>
-                   <script src="https://anvil.works/embed.js" async></script>
-<iframe style="width:100%;" data-anvil-embed src="https://S4K6LRFPR6OS4VOS.anvil.app/MK3KY4PVWRTEIRM2BGH3MSNS"></iframe>
+                   <div class="anvil_work" style="Height: 300px;" >
+                       <h1>Timer</h1>
+                       <script src="https://anvil.works/embed.js" async></script>  
+                      <iframe style="width:100%;" data-anvil-embed src="https://S4K6LRFPR6OS4VOS.anvil.app/MK3KY4PVWRTEIRM2BGH3MSNS"></iframe>
+                     
+                   </div>
+               
+                   
+                 
+
                 </div>
                 <div class="col-sm-4 portfolio-item">
                 <h1>Weekly study time calculator</h1>
