--- a/templates/python_apps.html
+++ b/templates/python_apps.html
@@ -36,7 +36,7 @@
                    <div class="anvil_work" style="Height: 300px;" >
                        <h1>Timer</h1>
                        <script src="https://anvil.works/embed.js" async></script>  
-                      <iframe style="width:100%;" data-anvil-embed src="https://S4K6LRFPR6OS4VOS.anvil.app/MK3KY4PVWRTEIRM2BGH3MSNS"></iframe>
+                      <iframe style="width:100% Height:200px;" data-anvil-embed src="https://S4K6LRFPR6OS4VOS.anvil.app/MK3KY4PVWRTEIRM2BGH3MSNS" ></iframe>
                      
                    </div>
                
