--- a/templates/index.html
+++ b/templates/index.html
@@ -113,7 +113,7 @@
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a href="https://cleverprogrammer.github.io/tony_portfolio_cp/"_blank" class="portfolio-link" data-toggle="modal">
+                    <a href="https://github.com/thefool363/thefool363.github.io.git"_blank" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
