--- a/templates/python_apps.html
+++ b/templates/python_apps.html
@@ -58,7 +58,7 @@
                 <div class="col-sm-4 portfolio-item">
                 <h1>TO-DO list app</h1>
             <script src="https://anvil.works/embed.js" async></script>
-<iframe style="width:100% Height: 300px;" data-anvil-embed src="https://OIZJDKM4OZ7EB3UW.anvil.app/PU5NXZVANQSAU66EBFF6TL4O"></iframe>
+<iframe style="width:100%; height: 300px;" data-anvil-embed src="https://OIZJDKM4OZ7EB3UW.anvil.app/PU5NXZVANQSAU66EBFF6TL4O"></iframe>
 
 
                     
